# job-search-bot

./: .gitignore  CLAUDE.md  Procfile  README.md  bootstrap.py  config.py  db.py  jobs.db  main.py  pyproject.toml  railway.json
.github/workflows/: hourly.yml
bot/: __init__.py  bootstrap.py
docs/: APIFY_COST.md  LINKEDIN_POST_DRAFT.md  PHASE2_SPEC.md  PLATFORM_COST.md
mcp-wrapper/: CHANGELOG.md  DEMO.md  Dockerfile  README.md  SECURITY.md  TOOLS.md  http_server.py  pyproject.toml  server.py  storage.py  tools.py
tests/: conftest.py  test_bookmarks.py  test_bootstrap.py  test_compare_jobs.py  test_e2e.py  test_interviews_reminders.py  test_profile_export.py  test_search.py  test_security.py  test_smoke.py
web/: .env.example  CLAUDE.md  package-lock.json  package.json
web/src/: auth.ts  middleware.ts
web/src/app/: layout.tsx
web/src/app/(app)/: layout.tsx
web/src/app/(app)/discover/: page.tsx
web/src/app/(app)/onboarding/: page.tsx
web/src/app/discover/: layout.tsx  page.tsx
web/src/app/login/: page.tsx
web/src/app/onboarding/: page.tsx
web/src/app/signout/: page.tsx
web/src/components/: cover-letter-modal.tsx  job-detail-modal.tsx  sidebar.tsx
web/src/data/: companies.ts  demo-jobs.ts
web/src/lib/: direct-search.ts  keys.ts  mcp-client.ts  pdf-extract.ts  profile.ts
