# mcp-wrapper/pyproject.toml
#
# Rationale: Same-repo monorepo — the MCP wrapper is tightly coupled to the bot's
# function signatures and config format. Keeping them together avoids version drift
# during early iteration. Extract to a separate repo only if this stabilizes and
# gains its own user base or release cadence.

[project]
name = "job-search-bot-mcp"
version = "0.1.0"
description = "MCP (Model Context Protocol) server wrapping the job-search-bot pipeline"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}

dependencies = [
    "mcp>=1.0.0",
    "requests>=2.32.0",
    "google-genai>=1.47.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = ["pytest", "pytest-asyncio"]

[project.scripts]
job-search-mcp = "server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]
